<resources>
    <string name="version">Version 1.0</string>
    <string name="app_name">自我修养</string>
    <string name="appnameabout">自我修养 正式版</string>
    <string name="book">《富兰克林自传》</string>
    <string name="devTemp">.</string>
    <string name="main_toolbar_setting">设置</string>
    <string name="main_toolbar_help">帮助</string>
    <string name="main_toolbar_contactme">请吐槽</string>
    <string name="today_control_popup_title">今天做的怎么样？</string>
    <string name="todayControlPopupTitleFormat">%1$s%2$s做的怎么样？</string>
    <string name="today_control_popup_good">\n非常好</string>
    <string name="today_control_popup_bad">\n糟糕</string>
    <string name="comment">感想：</string>
    <string name="hintComment">嘿，你为什么没有做到？</string>
    <string name="pupupAddComment">確定</string>
    <string name="quotesBegin">“</string>
    <string name="quotesEnd">”</string>
    <string name="reportTitle">最新周期污点</string>
    <string name="commentTitle">感想TOP15</string>
    <string name="mainMotto">题句</string>
    <string name="titleTenperance">节制</string>
    <string name="titleTenperanceDes">食不过饱\n饮酒不醉</string>
    <string name="titleTenperanceMotto">饮食自倍，肠胃乃伤；饮食以时，饥饱得中；不欲极饥而食，食不过饱。不欲极渴而饮，饮不过多；以酒为浆，故半百而衰也</string>
    <string name="titleSilence">缄默</string>
    <string name="titleSilenceDes">言必于人于己有益\n避免无益的聊天</string>
    <string name="titleSilenceMotto">切莫交浅言深；不要尝试说服别人。当你试着说服别人的时候，其实你在关闭你的心门，你的说服，往往建立对别人的否定之上，或者到最后，你干脆把对方的不接受，归结为他的愚蠢。</string>
    <string name="titleOrder">规律</string>
    <string name="titleOrderDes">每一样东西应有一定的安放的地方\n每件日常事务当有一定的时间</string>
    <string name="titleOrderMotto">早上6点准时起床，晚上11点准时上床睡觉；按时吃饭，少食多餐，一定要吃早餐；每周最少一次半个小时无氧运动，最少一次半个小时有氧运动</string>
    <string name="titleResolution">决心</string>
    <string name="titleResolutionDes">当作必做\n决心要做的事情应当坚持不懈</string>
    <string name="titleResolutionMotto">言必信，行必果；再不做，你又要后悔了；昨天，你说了今天；种一棵树最好的时间是10年前，其次是现在；做一件事情，坚持到底，无论你的选择是怎么样的。切忌，不要朝秦慕楚，三心二意</string>
    <string name="titleFrugality">俭朴</string>
    <string name="titleFrugalityDes">用钱必须于人于己有益，换言之，切戒浪费</string>
    <string name="titleFrugalityMotto">关于金钱的真谛：所有那些你十分想购买的东西，之所以对你有那么大的吸引力，是因为你买不起（或者你需要非常努力地工作才能够得到）。假如你能够轻易的支付，那个东西对你来说也就没那么珍贵了</string>
    <string name="titleIndustry">勤勉</string>
    <string name="titleIndustryDes">不浪费时间\n每时每刻做些有用的事戒掉一切不必要的行动</string>
    <string name="titleIndustryMotto">最浪费时间的当然是「社交」：想想看，我们大多数人的一生，通常也就一位灵肉合一的伴侣，两三位知根知底的朋友。而互联网，却可以让我们理论上和任何人交谈，和无数人社交，诱惑着我们把有效的生命投入到无限的「刷社交」活动中，端起一种「天下我大可交尽」的架势。可是，我真怀疑，网线那头的他的世界，我真的可以进入吗？网络上的谈笑风生、称兄道弟、勾搭暧昧，是不是只是一种错觉？我们多少人的「社交」，仅仅是为了排遣浸透骨髓的寂寞？或者仅仅是为了一点雾里看花的虚荣？或者仅仅是为了进入他的身体而非他的内心？</string>
    <string name="titleSincerity">诚恳</string>
    <string name="titleSincerityDes">不欺骗人\n思想要纯洁公正\n说话也要如此</string>
    <string name="titleSincerityMotto">人与人之间，尊重和理解是第一位的；说话做事，为他人着想、为他人负责；己所不欲勿施于人，将心比心地理解别人的难处和困境</string>
    <string name="titleJustice">公正</string>
    <string name="titleJusticeDes">不做不利于人的事\n不要忘记履行对人有益而又是你应尽的义务</string>
    <string name="titleJusticeMotto">你应该清楚君子和而不谋，在面对与你矛盾的人或事时，切勿排除异己</string>
    <string name="titleModeration">中庸</string>
    <string name="titleModerationDes">避免极端\n人若给你应得处罚，你当容忍之</string>
    <string name="titleModerationMotto">你善良，你会遇上善良；你善良，你能带出身边人身上的善良；遇事先分析当事人的思想动机，而不要妄加善恶标签</string>
    <string name="titleCleanliness">清洁</string>
    <string name="titleCleanlinessDes">身体、衣服和住所力求清洁</string>
    <string name="titleCleanlinessMotto">美是这个世界上最有生产力的东西之一，要注意自己的仪表；早上洗漱不仅是清理面部、口腔，还要清理鼻腔、耳道。晚上尽可能也如此，无论你有多懒散；收拾房间，记得扔，无论有多舍不得；用完东西，放回原处，无论有多远</string>
    <string name="titleTranquillity">镇静</string>
    <string name="titleTranquillityDes">勿因小事或普通的不可避免的事故而惊慌失措</string>
    <string name="titleTranquillityMotto">深呼吸，告诉自己这事也会和十年前的某件事一样成为过去</string>
    <string name="titleChastity">贞节</string>
    <string name="titleChastityDes">除了为了健康或生育后代起见，不常举行房事\n切戒房事过度，伤害身体或损害你自己或他人的安宁或名誉</string>
    <string name="titleChastityMotto">我们往往太年轻，不知道感情要细水长流，总是想着一下子天长地久，结果事与愿违。在感情中，记得细水长流</string>
    <string name="titleHumility">谦虚</string>
    <string name="titleHumilityDes">效仿耶稣和苏格拉底</string>
    <string name="titleHumilityMotto">当别人表示一个我认为是错误的意见时，我并不粗暴地驳斥他的主张，立刻指出他提案中某些荒谬悖理的地方，我放弃了这样驳斥时所给我的快慰。在回答时我开始指出在某些情况下他的看法是正确的，但在当前的情况下在我看来或是好像有些不同</string>
    <string name="welcome11">我们坚持一件事情\n并不是因为这样做了会有效果\n而是坚信\n这样做是对的\n\n——哈维尔</string>
    <string name="welcome12">如果你想要你从未拥有过的东西\n那么你必须去做你从未做过的事。</string>
    <string name="welcome13">YESTERDAY\nYOU SAID\nTOMORROW\n——JUST DO IT.</string>
    <string name="welcome14">人会长大三次\n第一次是在发现自己不是世界中心的时候\n第二次是在发现即使再怎么努力\n终究还是有些事令人无能为力的时候\n第三次是在\n明知道有些事可能会无能为力\n但还是会尽力争取的时候</string>
    <string name="welcome15">反思是360的文化\n反思不是一件负面的事情\n并不是做错事情了才需要反思\n每个人每天都需要反思\n经验是过去的\n要敢于不断否定自己\n对我来说\n反思包括两个方面：\n第一，从过去的失败中能总结出什么经验，避免重蹈覆辙\n第二，保持学习的心态，向用户学习，向竞争对手学习\n——周鸿祎《我的互联网方法论》</string>
    <string name="welcome16">一个人要替一个花园拔草\n他不能企图一次就消灭所有的野草\n这样做会超过他的能力\n但是他在某一个时候只对付一个花坛\n在拔完了第一个花坛以后\n才动手第二个\n——本杰明.富兰克林</string>
    <string name="welcome1">这儿我要坚持到底\n若是上苍有灵\n（整个宇宙和宇宙间的一切都在大声叫喊证明上帝的存在）\n上帝必然喜悦美好的德行\n而上帝所喜悦的人必然幸运\n——《凯朵》艾迪巡</string>
    <string name="welcome2">啊\n哲学\n生命的指南\n啊\n美德的探索者\n罪恶的祛除者啊\n有一天\n照您的指示好好地干\n总会趋吉避凶的\n——西塞罗</string>
    <string name="welcome3">她右手掌握着无穷无尽的岁月\n左手里全是财富和荣誉\n她的道路是幸福快乐的\n她的方向是和平的\n——《圣经》所罗门.箴言（第三章，十六十七两节）</string>
    <string name="welcome4">啊\n全能至上的上帝\n慈悲的上帝\n仁慈的指路人\n增添我的只会\n使我能够看清我真正的利益\n加强我的意志力\n使我能够执行智慧的命令\n接受我对您其他子民的衷心服役\n座位我对上帝不断福佑的唯一可能的报答\n——本杰明.富兰克林</string>
    <string name="welcome5">光明生命之父\n之高之神\n教我认识美德\n认识至善之神\n就素我脱离放荡\n虚荣和恶习\n脱离一切下贱的追逐\n求神使我的灵魂充满只是\n心神的安宁\n纯洁的德行\n和圣洁、真实、永无止息的至福幸运\n——汤姆逊</string>
    <string name="totalUsedCount">总共运行软件的天数</string>
    <string name="totalReflectiveCount">总共反省的次数</string>
    <string name="settingtitle">设置</string>
    <string name="moralItem">美德项目</string>
    <string name="cycle">周期</string>
    <string name="welcome">题句</string>
    <string name="done">完成</string>
    <string name="settingProjectItemDescript">我提出了十三种德行，这是当时我认为是必需的或是相宜的全部德行名目，在每一项底下我加了一些简单的箴言，充分地说明了我认为该词涵义应有的范围</string>
    <string name="settingWelcomeDescrpit">我从艾迪逊的“凯朵”中引用下面这几行作为这本小册子的题句</string>
    <string name="SettingCycleDescription">我决定给与每一项美德一个星期的严格注意，如此轮流替换</string>
    <string name="SettingCycleSeekbar">拖动调整训练周期：</string>
    <string name="settingRestore">恢复默认</string>
    <string name="deleteHistoryComment">清空历史感想</string>
    <string name="cancel">取消</string>
    <string name="OK">确定</string>
    <string name="title">项目：</string>
    <string name="description">描述：</string>
    <string name="motto">箴言：</string>
    <string name="hintSettingTitle">这里输入美德名称</string>
    <string name="hintSettingDes">描述这项美德的具体意义</string>
    <string name="hintSettingMotto">引用一段你喜欢的话，来定义该美德</string>
    <string name="yesterday">昨天</string>
    <string name="dayBeforeYesterday">前天</string>
    <string name="moreDay">天前</string>
    <string name="startNewMoralInfo">开始进行为期 %1$d 天的 %2$s 训练计划,密切预防关于  %2$s 的任何极细微的过失</string>
    <string name="nextPage1">下一页（&#8531;）</string>
    <string name="nextPage2">下一页（&#8532;）</string>
    <string name="enjoylife">版权与说明\nCopyright ©2014 Pavkoo,All Rights Reserved.\n\n如果你在使用过程中有任何问题，可以联系我：Pavkoo@live.com\n或者加入到我们的QQ群一起讨论：175367237</string>
    <string name="bookcontenttitle1">人要发财，就得请教妻子</string>
    <string name="bookcontenttitle2">"相宜的全部德行名目 "</string>
    <string name="bookcontent2">
<![CDATA[ 
<p>
\t既然我的目的是在养成这一切美德的习惯，
<b><font color="#c84141">我认为最好还是不要立刻全面地去尝试，以致分散注意力，最好还是在一个时期内集中精力对付其中的一个。</font></b>
当我掌握了那个美德以后，接着就开始注意另外一个，这样下去，直等到我做到了十三条为止。
<b><font color="#c84141">因为先获得的一些美德可以便利其他美德的培养，所以我就按照这个主张把它们像上面的次序排列起来。</font></b>
我把节制放在第一，因为它可能使我头脑冷静，思想清楚。为了经常保持警惕，抵抗旧习惯不断的吸力和无穷无尽的试探的引诱，这种冷静的头脑和清晰的思想是必要的，在获得和养成了这一美德以后，沉默寡言就容易得多了。在改进我品德的同时我还想增进知识，我认为在谈话时与其用嘴还不如用耳朵更能增进知识，因此我想打破我当时正在形成的爱好喋喋不休、爱说俏皮话、爱戏谑的习惯。这种习惯使我只能与轻浮的人交友，因此我给了沉默寡言第二位。在获得了这一项和下一项(生活秩序)的美德以后，我估计会使我有更多的时间来执行我的计划来读书。养成了有决心这一习惯后，我就能更坚决地努力获得其余的美德了。俭朴和勤勉能使我还清债款的余数，会给我财富和产业，会使诚恳和公正的实践更加容易，等等等等。接着，按照毕达哥拉斯在他的“金诗篇”里所提出的意见，
<b><font color="#c84141">我认为每日必须检查，</font></b>
因此我想出下面的方法来进行考查。
</p><p>
\t我做了一本小册子，每一美德分配到一页。每一页用红墨水画成七行，一星期的每一天占一行，每一行上注明代表礼拜几的一个字母。我用红线把这些直行画成十三条横格，在每一条横格的头上注明每一美德的第一个字母。在这横格的适当直行中，
<b><font color="#c84141">我可以记上一个小小的黑点，代表在检查当天该项美德时所发现的过失。</font></b>
</p> 
<p>
\t我决定给与每一项美德一个星期的严格注意，如此轮流替换。这样，在第一星期中，我密切预防关于节制的任何极细微的过失。其他的美德让它们像平时一样，只是每晚记下有关的过失。这样，假如在第一个星期中，我能使写着“节制”的第一行里没有黑点，我就以为这一美德已经加强了，它的相反方面已经削弱了，其程度也许足以使我扩大我的注意力到下面的一项，争取在下一周内在两行中都没有黑点。这样下去直到最后一项，我可以在十三个星期内完毕一个整个的过程，一年可以循环四次。
<b><font color="#c84141">一个人要替一个花园拔草，他不能企图一次就消灭所有的野草，这样做会超过他的能力，但是他在某一个时候只对付一个花坛，在拔完了第一个花坛以后，才动手第二个。</font></b>
像他一样，我希望我能令人快慰地在我的表格上看到我在品德上的进步，在逐步地清除了横行中的黑点之后，直到末了，在几个循环之后，在十三个星期的逐日检查以后，我会愉快地看到一本干净的簿子了。
</p> <p>
\t我从艾迪逊的“凯朵”中引用下面这几行作为这本小册子的
<b><font color="#c84141">题句</font></b>
： 
</p>
<p><b><font color="#c84141">这儿我要坚持到底。若是上苍有灵(整个宇宙和宇宙间的一切都在大声叫喊证明上帝的存在)，上帝必然喜悦美好的德行； 而上帝所喜悦的人必然幸运。  </font></b></p>
<p>\t另外还引了西塞罗的话作为题句： </p>
<p><b><font color="#c84141">啊!哲学!生命的指南!啊!美德的探索者，罪恶的祛除者呀!有一天，照您的指示好好地干，总会趋吉避凶的。</font></b> </p>
<p>\t另一句题句引自所罗门的箴言，讲到智慧或美德时说：  </p>
<p><b><font color="#c84141">她右手掌握着无穷无尽的岁月，左手里全是财富和荣誉，她的道路是幸福快乐的，她的方向是和平的(第三章，十六十七两节)。 </font></b> </p>
<p>\t我断定上帝是智慧的泉源，所以我认为在寻求智慧中我应当和必须祈求上帝的协助。为了这个目的我写了下面一篇短短的祈祷文，放在我检查表格的前面，以便每日使用：   </p>

<p><b><font color="#c84141">啊!全能至善的上帝!慈悲的天父!仁慈的指路人!增添我的智慧，使我能够看清我真正的利益。加强我的意志力，使我能够执行智慧的命令。接受我对您其他子民的衷心的服役，作为我对上帝不断福佑的唯一可能的报答。</font></b>  </p>
<p>\t有时我也引用了汤姆逊的一首诗作为短短的祈表格式样 ，那就是：</p>
<p><b><font color="#c84141">光明生命之父，至高之神! 啊!教我认识美德，认识至善之神! 救赎我脱离放荡，虚荣和恶习， 脱离一切下贱的追逐；求神使我的灵魂，充满着知识，心神的安宁，纯洁的德行，和圣洁、真实、永无止息的至福幸运。</font></b> </p>
]]>
    </string>
    <string name="bookcontenttitle3">关于“生活秩序”</string>
    <string name="bookcontent3">
<![CDATA[         
<p>\t生活秩序一项的涵义要求每件日常事务有一定的时间，因此我小册子里的一页上载着一天二十四小时的作息时间表。 </p>
<p>（5、6）早晨。问题：今天我要做些什么好事?</p>
<p>（7）起身，盥洗，祈祷全能至善的上帝!计划一天的工作，决定当日应注意之点；进行当前的研究工作，早餐。</p> 
<p>（8、9、10、11）工作。</p>
<p>（12）中午。</p>
<p>（1）阅读，检查我的账册，午餐。</p> 
<p>（2、3、4、5）工作。</p>
<p>（6、7、8）问题：今天我做了些什么好事?</p>
<p>（9）物归原处。晚餐。音乐或文娱活动，或闲谈。检查当天的行为。</p>
<p>（10、11、12、1、2、3、4）夜。睡眠。</p>
<p>但是碰巧我撰写和发表这些说明的打算从未实现。的确，我常常记下一些短短有关的感想、论断等的笔记，以备日后应用，有一部分我还保存到现在哩!但是由于我早年对私人事业和日后对国家大事必须加以密切的注意，使我不得不把它耽搁了。因为既然我认为它跟一个巨大的广泛的计划有关，而这个计划又需要一个人的全部精力去执行，一连串非预料所及的职务使我无法实现这一计划，因此这些说明也就迄今尚未脱稿。</p> <p>在这部作品中，我本想解释和应用这样一个原则，就是：<b><font color="#c84141">假如光考虑到人性的话，那么不道德行为之所以有害，并不是因为它们是被禁止的，而它们之所以被禁止正是由于它们有害。因此，做一个有德行的人，即使他希望在今生得到快乐的话，也是于他有益的，从这种情况看来(因为世界上经常有一些富商、贵族和亲王需要诚实的仆人去管理他们的事务，而这种诚实人又很罕见)，我本想努力使年轻人相信，世界上没有其他品质能像诚实廉洁一样地可能使一个穷小子发财。 </font></b></p> <p>我的品德项目起初只包括十二条，但是一个教友会的朋友很亲切地告诉我说，人们一般都认为我很自大，我的自大又常在谈话中显露出来，我在讨论任何问题时总不满足于证明我是正确的，而且还傲慢自大，有点盛气凌人。关于这一点他举了几个实例使我信服。我决心尽可能地在克服其他缺点的同时，努力克服这种坏习惯或愚行，所以我在单子上加了谦虚一项，并使这词具有广泛的涵义。</p> <p>我不敢夸口在养成谦虚习惯方面，在实际上我有多大的成就，但在外表上我却有了不少进展。<b><font color="#c84141">我经常禁止我自己说出一切直接与别人的意见相左的和一切过分自信的话，我甚至按照我们“密社”的老规矩不许我自己使用英语中一切表明肯定见解的单词或辞句，例如“一定地”、“无疑地”等等。相反的，我采用了“我想象”、“我料想”，或是“我猜想一件事情是如此如此”，或是“现在在我看来好像是……”。当别人表示一个我认为是错误的意见时，我并不粗暴地驳斥他的主张，立刻指出他提案中某些荒谬悖理的地方，我放弃了这样驳斥时所给我的快慰。在回答时我开始指出在某些情况下他的看法是正确的，但在当前的情况下在我看来或是好像有些不同，云云。 </font></b>不久我发现了这种改变方式方法的好处，我跟别人的谈话比以前融洽了。由于我谦逊地提出了我自己的见解，这些意见反而更容易为人所接受，更少引起人们的反驳。当我发现我错了的时候，我也不至于过分地懊丧；当我是对的时候，我也更能说服别人放弃他们的错误，接受我的意见。</p> <p>这种做法，起初我觉得很别扭，后来终于变得那么容易，对我那么自然，我想可能在过去五十年中没有人曾经听我说过一句武断的话。在我早年，当我提议建立新的制度或是修改旧的制度时，我的意见之所以被人重视，我后来成为议员，我之所以在议会中有那么大的影响，我想这主要当归功于这种种谦逊的习惯(撇开我的诚实廉洁品德不讲的话)；因为我不善辞令，从来不是一个能说善辩的人，讲话疙里疙瘩，常有语病，但是尽管如此，我的主张一般仍然得到人们的支持。</p> <p><b><font color="#c84141">其实，在我们天生的各种感情中，恐怕没有一样比骄傲更难以驯服的了。尽管你把它改头换面，跟它拼命，把它打入十八层地狱，把它镇压下去，尽管你尽量地把它压制克服，你还是消灭不了它，它还会不时地钻出头来显露原形。可能就在这本自传里你会常常遇见它；因为即使我能想象我已经完全克服了骄傲这一缺点，可能我又会因我的谦虚而感到自豪了。 </font></b></p> 
<p>以上一七八四年写于巴夕。</p>]]>
    </string>
    <string name="igotit">我知道了</string>
    <string name="tutorials5">或者跳过</string>
    <string name="tutorials6">了解方法论</string>
    <string name="tutorials7">设置我的修养计划</string>
    <string name="tutorials2">嘿，你好，伙计！
\n在你开始使用软件之前，我想我们应该就一些认识世界的观念达成一致。因为只有这样，你才能够知道你是否真的需要这个软件。
\n（点击继续）</string>
    <string name="tutorials8">好的。感谢你的配合！\n\n软件采用的方法论来自于《富兰克林自传》里关于他在道德修养中所使用的方法。\n如果你对该方法不熟悉，可以</string>
    <string name="or2">又或者</string>
    <string name="bye">呵呵，不太适合我，再见！</string>
</resources>