<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_app_bg_secondary"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/appBorderPadding" >

    <ImageView
        android:id="@+id/ivTutoriHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/devTemp"
        android:src="@drawable/headmin" />

    <TextView
        android:id="@+id/tvChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/textPadding"
        android:clickable="true"
        android:lineSpacingMultiplier="1.3"
        android:gravity="center_vertical"
        android:text="@string/tutorials2"
        android:textColor="@color/white_app_txt_black" />

    <LinearLayout
        android:id="@+id/llChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/textPadding"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tvChart2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textPadding"
            android:gravity="center_vertical"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/tutorials8" />

        <TextView
            android:id="@+id/tvChartShowBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textPadding"
            android:background="@drawable/setting_roundrect_selector"
            android:clickable="true"
            android:padding="@dimen/textPadding"
            android:gravity="center_vertical"
            android:text="@string/tutorials6"
            android:textColor="@color/white_app_txt_white" />

        <TextView
            android:id="@+id/tvChartOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.3"
            android:layout_margin="@dimen/textPadding"
            android:gravity="center_vertical"
            android:text="@string/tutorials5" />

        <TextView
            android:id="@+id/tvChartGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textPadding"
            android:background="@drawable/setting_roundrect_selector"
            android:clickable="true"
            android:padding="@dimen/textPadding"
            android:gravity="center_vertical"
            android:text="@string/tutorials7"
            android:textColor="@color/white_app_txt_white" />
        
        <TextView
            android:id="@+id/tvChartOr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.3"
            android:layout_margin="@dimen/textPadding"
            android:gravity="center_vertical"
            android:text="@string/or2" />

        <TextView
            android:id="@+id/tvChartBye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textPadding"
            android:background="@drawable/setting_roundrect_selector"
            android:clickable="true"
            android:padding="@dimen/textPadding"
            android:gravity="center_vertical"
            android:text="@string/bye"
            android:textColor="@color/white_app_txt_white" />
    </LinearLayout>

</LinearLayout>