<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/appBorderPadding"
    android:background="@drawable/popup_background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="@dimen/textPadding"
        android:padding="@dimen/textPadding"
        android:gravity="center_vertical|left"
        android:text="@string/appnameabout"
        android:textColor="@color/white_app_txt_black"
        android:textSize="26sp" />

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_app_bg_darkgray"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/textPadding"
        android:textColor="@color/white_app_txt_gray"
		android:text="@string/version"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/textPadding"
        android:lineSpacingMultiplier="1.3"
        android:textColor="@color/white_app_txt_gray"
		android:text="@string/enjoylife"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/ivSettingSystemMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/devTemp"
        android:padding="@dimen/textPadding"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:src="@drawable/aboutpavkooanim" />
    
</LinearLayout>